# youre-muted-btw

./: Cargo.toml  README.md  build.ps1  build.rs  considerations  make-icon.ps1  todo.md
.github/instructions/: bevy.instructions.md  rust.instructions.md
crates/app_under_cursor_plugin/: Cargo.toml
crates/app_under_cursor_plugin/src/: lib.rs
crates/args/: Cargo.toml
crates/args/src/: lib.rs
crates/assets/: Cargo.toml
crates/assets/src/: font.rs  lib.rs  render_layer.rs  sound.rs  texture.rs
crates/click_plugin/: Cargo.toml
crates/click_plugin/src/: lib.rs
crates/console/: Cargo.toml
crates/console/src/: ansi_support.rs  lib.rs
crates/discord_app_plugin/: Cargo.toml
crates/discord_app_plugin/src/: lib.rs  worker.rs
crates/egui_plugin/: Cargo.toml
crates/egui_plugin/src/: lib.rs
crates/exit_on_esc_plugin/: Cargo.toml
crates/exit_on_esc_plugin/src/: lib.rs
crates/host_cursor_position_plugin/: Cargo.toml
crates/host_cursor_position_plugin/src/: lib.rs
crates/inspector_plugin/: Cargo.toml
crates/inspector_plugin/src/: lib.rs
crates/ipc_plugin/: Cargo.toml
crates/ipc_plugin/src/: lib.rs
crates/lifecycle/: Cargo.toml
crates/lifecycle/src/: lib.rs
crates/logs/: Cargo.toml
crates/logs/src/: lib.rs
crates/mic_detection_plugin/: Cargo.toml
crates/mic_detection_plugin/src/: hicon_to_image.rs  icon_path.rs  lib.rs  load_icon_from_dll.rs  mic_icon.rs  mic_list.rs  windows_macros.rs
crates/mute_status_window_plugin/: Cargo.toml
crates/mute_status_window_plugin/src/: lib.rs
crates/position_window_plugin/: Cargo.toml
crates/position_window_plugin/src/: lib.rs
crates/targeting_circle/: Cargo.toml
crates/targeting_circle/src/: click_handling.rs  lib.rs  window_management.rs
crates/targetting_window_plugin/: Cargo.toml
crates/targetting_window_plugin/src/: lib.rs
crates/tray/: Cargo.toml
crates/tray/src/: lib.rs
crates/tree_window_plugin/: Cargo.toml
crates/tree_window_plugin/src/: lib.rs
crates/ui_automation/: Cargo.toml
crates/ui_automation/src/: control_type.rs  conversion_traits.rs  discord_mute_button.rs  discord_windows_app.rs  drill.rs  drill_id.rs  element_info.rs  find_element_at.rs  gather_children.rs  gather_element_info.rs  gather_elements_at.rs  gather_info_tree.rs  gather_info_tree_ancestry_filtered.rs  gather_info_tree_filtered.rs  gather_root.rs  gather_tree_from_position.rs  gather_ui_ancestors_including_start.rs  lib.rs  runtime_id.rs  stop_behaviour.rs  toggle_state.rs  update_drill_ids.rs
crates/ui_automation/tests/: find_discord_mute_button.rs  find_discord_windows_app.rs  from_drill_id.rs  from_pos.rs  gather_root.rs  test_gather_tree_from_position.rs
crates/ui_automation_plugin/: Cargo.toml
crates/ui_automation_plugin/src/: lib.rs
crates/welcome_gui/: Cargo.toml
crates/welcome_gui/src/: lib.rs  spawn.rs
crates/window_icon_plugin/: Cargo.toml
crates/window_icon_plugin/src/: lib.rs
crates/windows_app/: Cargo.toml
crates/windows_app/src/: plugin.rs
crates/windows_app/tests/: list_test.rs
crates/windows_app_plugin/: Cargo.toml
crates/windows_app_plugin/src/: lib.rs  list.rs  plugin.rs  window_id.rs
crates/windy/: Cargo.toml
crates/windy/src/: error.rs  lib.rs  macros.rs  string_conversion.rs  string_replacement.rs  windy_error.rs
crates/worker_plugin/: Cargo.toml
crates/worker_plugin/examples/: error_handling.rs  example.rs  simple.rs
crates/worker_plugin/src/: bridge.rs  config.rs  create.rs  error.rs  lib.rs  message.rs  phantom_holder.rs  plugin.rs  state.rs
crates/world_inspector_plugin/: Cargo.toml
crates/world_inspector_plugin/src/: lib.rs
src/: console_check.rs  gui.rs  main.rs
