[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["TeamDman"]
repository = "https://github.com/TeamDman/youre-muted-btw.git"
edition = "2024"
license = "MPL-2.0"
version = "0.1.0"

[workspace.dependencies]
ymb_args = { path = "crates/args" }
ymb_tray = { path = "crates/tray" }
ymb_windy = { path = "crates/windy" }
ymb_lifecycle = { path = "crates/lifecycle" }
ymb_console = { path = "crates/console" }
ymb_logs = { path = "crates/logs" }
ymb_welcome_gui = { path = "crates/welcome_gui" }
ymb_world_inspector_plugin = { path = "crates/world_inspector_plugin" }
ymb_egui_plugin = { path = "crates/egui_plugin" }
ymb_exit_on_esc_plugin = { path = "crates/exit_on_esc_plugin" }
ymb_app_under_cursor_plugin = { path = "crates/app_under_cursor_plugin" }
ymb_windows_app_plugin = { path = "crates/windows_app_plugin" }
ymb_host_cursor_position_plugin = { path = "crates/host_cursor_position_plugin" }
ymb_assets = { path = "crates/assets" }
ymb_worker_plugin = { path = "crates/worker_plugin" }
ymb_ui_automation = { path = "crates/ui_automation" }
ymb_ui_automation_plugin = { path = "crates/ui_automation_plugin" }
ymb_tree_window_plugin = { path = "crates/tree_window_plugin" }
ymb_targeting_circle = { path = "crates/targeting_circle" }
ymb_mute_status_window_plugin = { path = "crates/mute_status_window_plugin" }
uiautomation = "0.18.4"
serde = { version = "1.0.219", features = ["derive"] }
bevy_egui = "0.34.1"
bevy = { version = "0.16.0",features=["track_location"] }
clap = { version = "4.5.37", features = ["derive"] }
color-eyre = "0.6.4"
eyre = "0.6.12"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Security",
] }
strum = { version = "0.27.1", features = ["derive"] }
bevy_log = "0.16.0"
holda = "0.1.0"
bevy-inspector-egui = "0.31.0"
crossbeam-channel = "0.5.15"
# tokio = { version = "1.45.0", features = ["full"] }
itertools = "0.14.0"
# chrono = { version = "0.4.41", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
winc = "0.3.0"
ymb_ipc_plugin = { path = "crates/ipc_plugin" }
uuid = { version = "1.8.0", features = ["v4"] }
interprocess = "2.2.3"

[package]
name = "youre-muted-btw"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ymb_args.workspace = true
ymb_tray.workspace = true
ymb_windy.workspace = true
ymb_logs.workspace = true
ymb_console.workspace = true
ymb_welcome_gui.workspace = true
ymb_lifecycle.workspace = true
