[package]
name = "ymb_app_under_cursor_plugin"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy.workspace=true
windows.workspace=true
ymb_windy.workspace=true
ymb_windows_app.workspace=true
ymb_host_cursor_position_plugin.workspace=true