[package]
name = "ymb_click_plugin"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy.workspace=true
ymb_windows_app_plugin.workspace=true
ymb_assets.workspace=true
ymb_discord_app_plugin.workspace = true
ymb_host_cursor_position_plugin.workspace = true
ymb_app_under_cursor_plugin.workspace=true