[package]
name = "ymb_mic_detection_plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
tracing.workspace = true
ymb_worker_plugin.workspace = true
windows = { workspace = true, features = [
    "Win32_Media",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_Foundation",
    "Win32_Devices_Properties",
    "Win32_Media_KernelStreaming",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemServices",
    "Win32_System_WindowsProgramming",
    "Win32_Media_Multimedia",
    "Win32_System_Environment"
] }
serde.workspace = true
ymb_windy.workspace=true
image.workspace=true
eyre.workspace=true
widestring.workspace=true
bstr.workspace=true

[dev-dependencies]
ymb_logs.workspace=true
ymb_args.workspace = true
