[package]
name = "ymb_mute_status_window_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "ymb_mute_status_window_plugin"
path = "src/lib.rs"

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
ymb_ipc_plugin.workspace = true
ymb_ui_automation.workspace = true
ymb_window_icon_plugin.workspace = true
ymb_assets.workspace = true