[package]
name = "ymb_targeting_circle"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bevy.workspace = true
eyre.workspace = true
ymb_app_under_cursor_plugin.workspace=true
ymb_assets.workspace = true
ymb_host_cursor_position_plugin.workspace = true
ymb_ui_automation.workspace = true
ymb_windows_app_plugin.workspace=true
ymb_worker_plugin.workspace = true
