[package]
name = "ymb_tray"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
windows.workspace=true
ymb_welcome_gui.workspace=true
ymb_logs.workspace=true
tracing.workspace=true
ymb_windy.workspace=true
ymb_console.workspace=true
ymb_lifecycle.workspace=true
ymb_args.workspace=true
interprocess.workspace = true
chrono.workspace = true