[package]
name = "ymb_tree_window_plugin"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy.workspace=true
bevy_egui.workspace=true
bevy-inspector-egui.workspace=true
ymb_ui_automation.workspace=true
ymb_ui_automation_plugin.workspace=true
