[package]
name = "ymb_ui_automation"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy.workspace=true
uiautomation.workspace=true
serde.workspace=true
eyre.workspace=true
itertools.workspace=true
bevy-inspector-egui.workspace=true
