[package]
name = "ymb_ui_automation_plugin"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bevy.workspace=true
chrono.workspace=true
ymb_worker_plugin.workspace=true
ymb_ui_automation.workspace=true
bevy-inspector-egui.workspace=true
uiautomation.workspace=true
