[package]
name = "ymb_welcome_gui"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
eyre.workspace = true
bevy.workspace = true
ymb_args.workspace = true
ymb_logs.workspace = true
windows.workspace = true
ymb_position_window_plugin.workspace = true
ymb_exit_on_esc_plugin.workspace = true
ymb_app_under_cursor_plugin.workspace = true
ymb_host_cursor_position_plugin.workspace = true
ymb_windows_app_plugin.workspace = true
ymb_click_plugin.workspace = true
ymb_discord_app_plugin.workspace = true
ymb_inspector_plugin.workspace = true
ymb_tree_window_plugin.workspace = true
ymb_assets.workspace = true
ymb_targetting_window_plugin.workspace = true
bevy-inspector-egui.workspace=true