[package]
name = "ymb_welcome_gui"
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
eyre.workspace = true
bevy.workspace = true
ymb_args.workspace = true
ymb_logs.workspace = true
windows.workspace = true
ymb_exit_on_esc_plugin.workspace = true
ymb_assets.workspace = true
ymb_world_inspector_plugin.workspace = true
ymb_egui_plugin.workspace = true
ymb_ui_automation_plugin.workspace = true
ymb_ipc_plugin.workspace = true
uuid.workspace = true
ymb_mute_status_window_plugin.workspace = true

[dependencies.ymb_mic_detection_plugin]
workspace = true
